fix(component/option-card): update the z-index values of the component elements
Fix #1318

--- a/packages/styles/components/_c.option-card.scss
+++ b/packages/styles/components/_c.option-card.scss
@@ -16,7 +16,7 @@
       position: absolute;
       right: $mu100;
       top: $mu100;
-      z-index: 10;
+      z-index: 4;
 
       &:focus {
         box-shadow: none;
@@ -46,7 +46,7 @@
         textarea,
         #{$parent}__focusable,
         [tabindex]:not([tabindex="-1"]) {
-          z-index: 2;
+          z-index: 3;
         }
       }
 
@@ -81,7 +81,7 @@
     top: 50%;
     transform: translate(-50%, -50%);
     width: 100%;
-    z-index: 5;
+    z-index: 2;
 
     &-text {
       @include visually-hidden();
